Adding README and code progress

--- a/project-01/indexaloha.html
+++ b/project-01/indexaloha.html
@@ -19,7 +19,7 @@
 
 <body>
     <!-- practice-->
-    <main>
+    <!-- <main>
         <ul class="twitter" role="navigation">
             <li><i class="fa fa-home"></i>Home</li>
             <li><i class="fa fa-bell-o"></i>Notifications</li>
@@ -32,7 +32,7 @@
         <nav class="facebook">Facebook</nav>
         <nav class="gitHub">Github</nav>
         <nav class="medium">Medium</nav>
-    </main>
+    </main> -->
     <!-- Top Logo Nav Cart -->
     <div class="top-nav">
         <div class="top-nav-stuff">
