Carousel CSS, Newsletter form CSS + JS, Desktop ver fin.

--- a/project-01/index.html
+++ b/project-01/index.html
@@ -42,19 +42,6 @@
         <h2>NEW COLLECTION</h2>
         <h2><span>Spring/Summer 2017</span></h2>
     </section>
-
-    <!-- <div class="main-carousel">
-            <div class="carousel-cell"><img src="images/stretch-knit-dress.jpg"></div>
-            <div class="carousel-cell"><img src="images/stretch-knit-dress.jpg"></div>
-            <div class="carousel-cell"><img src="images/stretch-knit-dress.jpg"></div>
-            <div class="carousel-cell"><img src="images/stretch-knit-dress.jpg"></div>
-            <div class="carousel-cell"><img src="images/stretch-knit-dress.jpg"></div>
-            <div class="carousel-cell"><img src="images/stretch-knit-dress.jpg"></div>
-            <div class="carousel-cell"><img src="images/stretch-knit-dress.jpg"></div>
-            <div class="carousel-cell"><img src="images/stretch-knit-dress.jpg"></div>
-            <div class="carousel-cell"><img src="images/stretch-knit-dress.jpg"></div>
-            <div class="carousel-cell"><img src="images/stretch-knit-dress.jpg"></div>
-    </div> -->
           
 <!-- Section1 -->
     <section id="section1">
@@ -115,8 +102,8 @@
                     <button>Add to Cart</button>
                 </div>
                 <div class="carousel-cell"><img src="images/pink-dotted-dress.jpg">
-                    <p class="producttype">Dresses/p>
-                    <h3>Pink Dotted Dress/h3>
+                    <p class="producttype">Dresses</p>
+                    <h3>Pink Dotted Dress</h3>
                     <p class="price">$99.00</p>
                     <button>Add to Cart</button>
                 </div>
