Mobile view, RWD mobile up, final touches.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <ul class="wordlinks"> 
                     <li><a href="#section1">ABOUT</a></li>
                     <li><a href="#shop-grid">SHOP</a></li>
-                    <li><a href="#section3carousel">FEATURED</a></li>
-                    <li><a href="#section4signup">UPDATES</a></li>
+                    <li><a href="#featuredproducts">FEATURED</a></li>
+                    <li><a href="#newsletter">UPDATES</a></li>
                 </ul>
             </div>
             <div class="cart">
@@ -43,9 +43,9 @@
         <h2><span>Spring/Summer 2017</span></h2>
     </section>
           
-<!-- Section1 -->
+<!-- Section1 about Aloha -->
     <section id="section1">
-        <div class="section1-stuff">
+        <div class="section1-about">
         <h2>Hand-Crafted <span>Styles</span></h2>
         <p>Aloha Apparel Co. sells only the finest ready-to-travel clothing. 
             Browse our current selection of products or sign-up for updates below.</p>
@@ -63,7 +63,7 @@
         </div>
     </section>
 <!-- Carousel -->
-    <section id="section3carousel">
+    <section id="featuredproducts">
         <div class="carousel-container">
             <h2>Most-Loved <span>Products</span></h2>
               <!-- Carousel-cell -->
@@ -124,15 +124,15 @@
     </section>
 
 <!-- Sign-up Newsletter -->
-    <section id="section4signup">
+    <section id="newsletter">
         <div class="container">    
             <h2>Sign-up for <span>Updates</span></h2>
             <p>Stay updated on our latest product releases, be first to find out about upcoming sales, 
-                and get free style tips from our blog. Unsuscribe at any time.</p>
+                and get free style tips from our blog. Unsubscribe at any time.</p>
 
             <form class="sign-up-form">
-                <input type="email" name="your_email" id="your-email" value="" placeholder="Your Email">
-                <input type="submit" name="subscribe" id="subscribe" value="Subscribe">
+                <input type="email" id="your-email" value="" placeholder="Your Email">
+                <input type="submit" id="subscribe" value="Subscribe">
             </form>
         </div>
             <form action="">
@@ -140,7 +140,7 @@
         </div>
     </section>
 
-<!-- bottom of page -->
+<!-- Bottom: Contact Social Media -->
     <footer>
         <div class="container">
             <div class="contact">
@@ -158,11 +158,11 @@
             </div>
             <div class="social-media">
                 <ul>
-                    <li><a href="www.facebook.com"><i class="fa fa-facebook"></i><span class="socialmedianame">Faceboook</span></a></li>
-                    <li><a href="www.twitter.com"><i class="fa fa-twitter"></i><span class="socialmedianame">Twitter</span></a></li>
-                    <li><a href="www.instragram.com"><i class="fa fa-instagram"></i><span class="socialmedianame">Instagram</span></a></li>
-                    <li><a href="www.pinterest.com"><i class="fa fa-pinterest"></i><span class="socialmedianame">Pinterest</span></a></li>
-                    <li><a href="www.google.com"><i class="fa fa-google-plus"></i><span class="socialmedianame">Google +</span></a></li>
+                    <li><a href="#"><i class="fa fa-facebook"></i><span class="socialmedianame">Faceboook</span></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i><span class="socialmedianame">Twitter</span></a></li>
+                    <li><a href="#"><i class="fa fa-instagram"></i><span class="socialmedianame">Instagram</span></a></li>
+                    <li><a href="#"><i class="fa fa-pinterest"></i><span class="socialmedianame">Pinterest</span></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus"></i><span class="socialmedianame">Google +</span></a></li>
                 </ul>
             </div>
         </div>
