--- a/index.html
+++ b/index.html
@@ -69,51 +69,51 @@
               <!-- Carousel-cell -->
             <div class="main-carousel"></li>
                 <div class="carousel-cell">
-                    <img src="images/stretch-knit-dress.jpg">
+                    <img src="images/stretch-knit-dress-compressed.jpg">
                     <p class="producttype">Dresses</p>
                     <h3>Stretch Knit Dress</h3>
                     <p class="price">$169.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="carousel-cell">
-                    <img src="images/cotton-blue-shirt.jpg">
+                    <img src="images/cotton-blue-shirt-compressed.jpg">
                     <p class="producttype">Shirts</p>
                     <h3>Cotton Blue Shirt</h3>
                     <p class="price">$89.00</p>
                     <button>Add to Cart</button>
                 </div>
-                <div class="carousel-cell"><img src="images/checked-stretch-dress.jpg">
+                <div class="carousel-cell"><img src="images/checked-stretch-dress-compressed.jpg">
                     <p class="producttype">Dresses</p>
                     <h3>Checked Stretch Dress</h3>
                     <p class="price">$129.00</p>
                     <button>Add to Cart</button>
                 </div>
-                <div class="carousel-cell"><img src="images/blue-hipster-backpack.jpg">
+                <div class="carousel-cell"><img src="images/blue-hipster-backpack-compressed.jpg">
                     <p class="producttype">Bags</p>
                     <h3>Blue Hipster Backpack</h3>
                     <p class="price">$69.00</p>
                     <button>Add to Cart</button>
                 </div>
 
-                <div class="carousel-cell"><img src="images/denim-overall-shorts.jpg">
+                <div class="carousel-cell"><img src="images/denim-overall-shorts-compressed.jpg">
                     <p class="producttype">Denim</p>
                     <h3>Denim Overall Shorts</h3>
                     <p class="price">$89.00</p>
                     <button>Add to Cart</button>
                 </div>
-                <div class="carousel-cell"><img src="images/pink-dotted-dress.jpg">
+                <div class="carousel-cell"><img src="images/pink-dotted-dress-compressed.jpg">
                     <p class="producttype">Dresses</p>
                     <h3>Pink Dotted Dress</h3>
                     <p class="price">$99.00</p>
                     <button>Add to Cart</button>
                 </div>
-                <div class="carousel-cell"><img src="images/blue-silk-dress.jpg">
+                <div class="carousel-cell"><img src="images/blue-silk-dress-compressed.jpg">
                     <p class="producttype">Dresses</p>
                     <h3>Blue Silk Dress</h3>
                     <p class="price">$119.00</p>
                     <button>Add to Cart</button>
                 </div>
-                <div class="carousel-cell"><img src="images/cotton-yellow-tshirt.jpg">
+                <div class="carousel-cell"><img src="images/cotton-yellow-tshirt-compressed.jpg">
                     <p class="producttype">Shirts</p>
                     <h3>Cotton Yellow Tshirt</h3>
                     <p class="price">$39.00</p>
@@ -176,5 +176,7 @@
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
     <script src="js/javascript.js"></script>
+    <script src="tota11y.min.js"></script>
+
 </body>
 </html>
