--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <!-- reset -->
-        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="css/reset.css">
         <!-- fonts -->
         <link rel="stylesheet" href="fonts/fontstylesheet.css">
         <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
         <!-- styles -->
-        <link href="style.css" rel="stylesheet"/>		
+        <link rel="stylesheet" href="css/style.css" />		
 
         <title>Shop at Aloha Apparel Co.!</title>
 </head>
