--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 <!-- Top: Logo Nav Cart -->
     <header class="top-nav">
-        <div class="top-nav-stuff">
+        <div class="top-nav-inner">
             <div class="logo">
                 <img src="images/aloha-logo.svg" alt="logo">
             </div>
@@ -135,6 +135,7 @@
                 <input type="submit" id="subscribe" value="Subscribe">
             </form>
         </div>
+        <div>
             <form action="">
             </form>
         </div>
