--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 
     <script src="js/javascript.js"></script>
-    <script src="tota11y.min.js"></script>
+    <script src="js/tota11y.min.js"></script>
 
 </body>
 </html>
