--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/reset.css">
         <!-- fonts -->
         <link rel="stylesheet" href="fonts/fontstylesheet.css">
-        <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
         <!-- styles -->
         <link rel="stylesheet" href="css/style.css" />		
 
