--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <!-- reset -->
         <link rel="stylesheet" href="css/reset.css">
-        <!-- fonts -->
         <link rel="stylesheet" href="fonts/fontstylesheet.css">
         <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
-        <!-- styles -->
         <link rel="stylesheet" href="css/style.css" />		
-
         <title>Shop at Aloha Apparel Co.!</title>
 </head>
 
@@ -21,7 +17,7 @@
     <header class="top-nav">
         <div class="top-nav-inner">
             <div class="logo">
-                <img src="images/aloha-logo.svg" alt="logo">
+                <img src="images/aloha-logo.svg" alt="Aloha logo">
             </div>
             <div class="navcontainer">
                 <ul class="wordlinks"> 
@@ -67,53 +63,59 @@
         <div class="carousel-container">
             <h2>Most-Loved <span>Products</span></h2>
               <!-- Carousel-cell -->
-            <div class="main-carousel"></li>
+            <div class="main-carousel">
                 <div class="carousel-cell">
-                    <img src="images/stretch-knit-dress-compressed.jpg">
+                    <img src="images/stretch-knit-dress-compressed.jpg" alt="Stretch Knit Dress">
                     <p class="producttype">Dresses</p>
                     <h3>Stretch Knit Dress</h3>
                     <p class="price">$169.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="carousel-cell">
-                    <img src="images/cotton-blue-shirt-compressed.jpg">
+                    <img src="images/cotton-blue-shirt-compressed.jpg" alt="Cotton Blue Shirt">
                     <p class="producttype">Shirts</p>
                     <h3>Cotton Blue Shirt</h3>
                     <p class="price">$89.00</p>
                     <button>Add to Cart</button>
                 </div>
-                <div class="carousel-cell"><img src="images/checked-stretch-dress-compressed.jpg">
+                <div class="carousel-cell">
+                    <img src="images/checked-stretch-dress-compressed.jpg" alt="Checked Stretch Dress   ">
                     <p class="producttype">Dresses</p>
                     <h3>Checked Stretch Dress</h3>
                     <p class="price">$129.00</p>
                     <button>Add to Cart</button>
                 </div>
-                <div class="carousel-cell"><img src="images/blue-hipster-backpack-compressed.jpg">
+                <div class="carousel-cell">
+                    <img src="images/blue-hipster-backpack-compressed.jpg" alt="Blue Hipster Backpack">
                     <p class="producttype">Bags</p>
                     <h3>Blue Hipster Backpack</h3>
                     <p class="price">$69.00</p>
                     <button>Add to Cart</button>
                 </div>
 
-                <div class="carousel-cell"><img src="images/denim-overall-shorts-compressed.jpg">
+                <div class="carousel-cell">
+                    <img src="images/denim-overall-shorts-compressed.jpg" alt="Denim Overall Shorts">
                     <p class="producttype">Denim</p>
                     <h3>Denim Overall Shorts</h3>
                     <p class="price">$89.00</p>
                     <button>Add to Cart</button>
                 </div>
-                <div class="carousel-cell"><img src="images/pink-dotted-dress-compressed.jpg">
+                <div class="carousel-cell">
+                    <img src="images/pink-dotted-dress-compressed.jpg" alt="Pink Dotted Dress">
                     <p class="producttype">Dresses</p>
                     <h3>Pink Dotted Dress</h3>
                     <p class="price">$99.00</p>
                     <button>Add to Cart</button>
                 </div>
-                <div class="carousel-cell"><img src="images/blue-silk-dress-compressed.jpg">
+                <div class="carousel-cell">
+                    <img src="images/blue-silk-dress-compressed.jpg" alt="Blue Silk Dress">
                     <p class="producttype">Dresses</p>
                     <h3>Blue Silk Dress</h3>
                     <p class="price">$119.00</p>
                     <button>Add to Cart</button>
                 </div>
-                <div class="carousel-cell"><img src="images/cotton-yellow-tshirt-compressed.jpg">
+                <div class="carousel-cell">
+                    <img src="images/cotton-yellow-tshirt-compressed.jpg" alt="Cotton Yellow Tshirt">
                     <p class="producttype">Shirts</p>
                     <h3>Cotton Yellow Tshirt</h3>
                     <p class="price">$39.00</p>
