HTML remove uppercase, CSS text transform. Footer remove divs add classes to <p>

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             </div>
             <div class="navcontainer">
                 <ul class="wordlinks"> 
-                    <li><a href="#section1">ABOUT</a></li>
-                    <li><a href="#shop-grid">SHOP</a></li>
-                    <li><a href="#featuredproducts">FEATURED</a></li>
-                    <li><a href="#newsletter">UPDATES</a></li>
+                    <li><a href="#section1">About</a></li>
+                    <li><a href="#shop-grid">Shop</a></li>
+                    <li><a href="#featuredproducts">Featured</a></li>
+                    <li><a href="#newsletter">Updates</a></li>
                 </ul>
             </div>
             <div class="cart">
@@ -35,7 +35,7 @@
 
 <!-- Banner / Current Title -->
     <section class="banner">
-        <h2>NEW COLLECTION</h2>
+        <h2>New Collection</h2>
         <h2><span>Spring/Summer 2017</span></h2>
     </section>
           
@@ -50,12 +50,12 @@
 <!-- Shop Grid -->
     <section id="shop-grid">
         <div class="shop-grid-container">
-            <div class="larger mens shopgriditem">MEN'S</div>
-            <div class="smaller trends shopgriditem">TRENDS</div>
-            <div class="smaller glasses shopgriditem">GLASSES</div>
-            <div class="smaller sale shopgriditem">SALE</div>
-            <div class="smaller bags shopgriditem">BAGS</div>
-            <div class="larger womens shopgriditem">WOMEN'S</div>
+            <div class="larger mens shopgriditem">Men's</div>
+            <div class="smaller trends shopgriditem">Trends</div>
+            <div class="smaller glasses shopgriditem">Glasses</div>
+            <div class="smaller sale shopgriditem">Sale</div>
+            <div class="smaller bags shopgriditem">Bags</div>
+            <div class="larger womens shopgriditem">Women's</div>
         </div>
     </section>
 <!-- Carousel -->
@@ -143,17 +143,11 @@
     <footer>
         <div class="container">
             <div class="contact">
-                <div class="copyright">
-                    <p>&copy; 2017 Aloha Apparel Co.</p>
-                    <p>Powered by HTML and CSS.</p>
-                </div>
-                <div class="phone">
-                    <p>604-604-6040. <a href="mailto:info@alohaapparel.com">info@alohaapparel.com</a></p>
-                </div>
-                <div class="address">
-                    <p>1490 W Broadway</p>
-                    <p>Vancouver, BC, Canada</p>
-                </div>
+                    <p class="copyright">&copy; 2017 Aloha Apparel Co.</p>
+                    <p class="copyright">Powered by HTML and CSS.</p>
+                    <p class="phone">604-604-6040. <a href="mailto:info@alohaapparel.com">info@alohaapparel.com</a></p>
+                    <p class="address">1490 W Broadway</p>
+                    <p class="address">Vancouver, BC, Canada</p>
             </div>
             <div class="social-media">
                 <ul>
