--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 and get free style tips from our blog. Unsubscribe at any time.</p>
 
             <form class="sign-up-form">
-                <input type="email" id="your-email" value="" placeholder="Your Email">
+                <input type="email" id="your-email" placeholder="Your Email">
                 <input type="submit" id="subscribe" value="Subscribe">
             </form>
         </div>
