--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </div>
             <div class="cart">
                 <a href="index.html"><img src="images/cart-icon.svg" alt="cart icon"/></a>
+                <p class="cart-total">0</p>
             </div>
         </div>
     </header>
