Stretch, JS add to cart button update cart total

--- a/index.html
+++ b/index.html
@@ -70,28 +70,28 @@
                     <p class="producttype">Dresses</p>
                     <h3>Stretch Knit Dress</h3>
                     <p class="price">$169.00</p>
-                    <button>Add to Cart</button>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="carousel-cell">
                     <img src="images/cotton-blue-shirt-compressed.jpg" alt="Cotton Blue Shirt">
                     <p class="producttype">Shirts</p>
                     <h3>Cotton Blue Shirt</h3>
                     <p class="price">$89.00</p>
-                    <button>Add to Cart</button>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="carousel-cell">
                     <img src="images/checked-stretch-dress-compressed.jpg" alt="Checked Stretch Dress   ">
                     <p class="producttype">Dresses</p>
                     <h3>Checked Stretch Dress</h3>
                     <p class="price">$129.00</p>
-                    <button>Add to Cart</button>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="carousel-cell">
                     <img src="images/blue-hipster-backpack-compressed.jpg" alt="Blue Hipster Backpack">
                     <p class="producttype">Bags</p>
                     <h3>Blue Hipster Backpack</h3>
                     <p class="price">$69.00</p>
-                    <button>Add to Cart</button>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
 
                 <div class="carousel-cell">
@@ -99,28 +99,28 @@
                     <p class="producttype">Denim</p>
                     <h3>Denim Overall Shorts</h3>
                     <p class="price">$89.00</p>
-                    <button>Add to Cart</button>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="carousel-cell">
                     <img src="images/pink-dotted-dress-compressed.jpg" alt="Pink Dotted Dress">
                     <p class="producttype">Dresses</p>
                     <h3>Pink Dotted Dress</h3>
                     <p class="price">$99.00</p>
-                    <button>Add to Cart</button>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="carousel-cell">
                     <img src="images/blue-silk-dress-compressed.jpg" alt="Blue Silk Dress">
                     <p class="producttype">Dresses</p>
                     <h3>Blue Silk Dress</h3>
                     <p class="price">$119.00</p>
-                    <button>Add to Cart</button>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
                 <div class="carousel-cell">
                     <img src="images/cotton-yellow-tshirt-compressed.jpg" alt="Cotton Yellow Tshirt">
                     <p class="producttype">Shirts</p>
                     <h3>Cotton Yellow Tshirt</h3>
                     <p class="price">$39.00</p>
-                    <button>Add to Cart</button>
+                    <button class="add-to-cart">Add to Cart</button>
                 </div>
             </div>
         </div>
