CSS valid. Better id & class names

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         <h2><span>Spring/Summer 2017</span></h2>
     </section>
           
-<!-- Section1 about Aloha -->
-    <section id="section1">
-        <div class="section1-about">
-        <h2>Hand-Crafted <span>Styles</span></h2>
-        <p>Aloha Apparel Co. sells only the finest ready-to-travel clothing. 
-            Browse our current selection of products or sign-up for updates below.</p>
+<!-- Section about Aloha -->
+    <section id="about">
+        <div class="about-inner">
+            <h2>Hand-Crafted <span>Styles</span></h2>
+            <p>Aloha Apparel Co. sells only the finest ready-to-travel clothing. 
+                Browse our current selection of products or sign-up for updates below.</p>
         </div>
     </section>
 <!-- Shop Grid -->
