JS fix smoothscrolling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="navcontainer">
                 <ul class="wordlinks"> 
-                    <li><a href="#section1">About</a></li>
+                    <li><a href="#about">About</a></li>
                     <li><a href="#shop-grid">Shop</a></li>
                     <li><a href="#featuredproducts">Featured</a></li>
                     <li><a href="#newsletter">Updates</a></li>
